--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width= device-width,initial-scale=1.0"
     <title>resume</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>resume building</h1>
+    <div class="main">
+      <div class="left">
+        <img src="download.jpg"height=50px;width=50px >
+        <h1 id="name">zakir</h1>
+        <h2>shaikzakir.997</h2>
+      </div>
+      <div class="right">
+     <h1>Education </h1>
+   </div>
+  </div>
+    <script type="text/javascript"src="main.js">
+    </script>
   </body>
 </html>
