--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   </head>
   <body>
     <div class="main">
-      <div class="left">
+      <!-- <div class="left">
         <img src="download.jpg"height=50px;width=50px >
         <h1 id="name">zakir</h1>
         <h2>shaikzakir.997</h2>
       </div>
       <div class="right">
      <h1>Education </h1>
-   </div>
+   </div> -->
   </div>
-    <script type="text/javascript"src="main.js">
+    <script type="text/javascript"src="main.js"async>
     </script>
   </body>
 </html>
