--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="main">
-      <!-- <div class="left">
-        <img src="download.jpg"height=50px;width=50px >
-        <h1 id="name">zakir</h1>
-        <h2>shaikzakir.997</h2>
-      </div>
-      <div class="right">
-     <h1>Education </h1>
+    <div class="main", id="main">
+         <!-- <div class="left">
+    <img src="download.jpg"width="50px",height="50px" alt = "photo">
+    <h1 id="name">shaikzakir</h1>
+    <h2>shaikzakir@gmail.com</h2>
+   </div>
+   <div class="right">
+    <h1>Education details</h1>
    </div> -->
   </div>
     <script type="text/javascript"src="main.js"async>
